--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,28 +1,25 @@
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+
 <p>This is the partial for view 1.</p>
 <p>{{title}}</p>
-
-<ol>
-    <li ng-repeat="item in items">
-        {{item}}
-    </li>
-</ol>
-
-<button ng-click="toggleShowTable()">TOGGLE TABLE</button>
-<button ng-click="loadForeCastData()">TOGGLE FORECAST</button>
-
-<table ng-if="showFlag">
+<table ng-if="showTable" class="w3-table w3-bordered w3-striped">
     <thead>
         <tr>
-            <th>Name</th>
-            <th>Manufacturer</th>
-            <th>Price</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Birth Date</th>
+            <th>Wallet Balance</th>
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="inventory in inventories">
-            <td>{{inventory.name}}</td>
-            <td>{{inventory.manufacturer}}</td>
-            <td>{{inventory.price}}</td>
+        <tr ng-repeat="wallet in walletData">
+            <td>{{wallet.firstName}}</td>
+            <td>{{wallet.lastName}}</td>
+            <td>{{wallet.email}}</td>
+            <td>{{wallet.birthDate}}</td>
+            <td>{{wallet.walletBalance}}</td>
         </tr>
     </tbody>
 </table>
